--- a/public/app/views/f1constructorstandings.html
+++ b/public/app/views/f1constructorstandings.html
@@ -4,21 +4,19 @@
         <div class="row">
             <div class="col-md-3">
                 <ul class="list-group" data-bind="foreach: years">
-                    <a data-bind="attr: { href: '/#standings/' + $data }"><li class="list-group-item"><span data-bind="text: $data"></span></li></a>
+                    <a data-bind="attr: { href: '/#constructorstandings/' + $data }"><li class="list-group-item"><span data-bind="text: $data"></span></li></a>
                 </ul>
             </div>
             <div class="col-md-9">
                 <!-- ko if: param() != null -->
-                <h2 data-bind="text: 'Driver Standings for ' + param()"></h2>
-                <table class="table table-striped" id="driversTable">
+                <h2 data-bind="text: 'Constructor Standings for ' + param()"></h2>
+                <table class="table table-striped" id="constructorsTable">
                     <thead>
-                        <tr><th>Position</th><th>Full Name</th><th>Nationality</th><th>Team</th><th>Points</th></tr>
+                        <tr><th>Position</th><th>Team</th><th>Points</th></tr>
                     </thead>
-                    <tbody data-bind="foreach: drivers">
-                        <tr>
+                    <tbody data-bind="foreach: constructors">
+                        <tr>                    
                             <td data-bind="text: Position"></td>
-                            <td data-bind="text: Driver"></td>
-                            <td data-bind="text: Nationality"></td>
                             <td data-bind="text: Team"></td>
                             <td data-bind="text: Points"></td>
                         </tr>
@@ -26,6 +24,6 @@
                 </table>
                 <!-- /ko -->
             </div>
-        </div> <!--.row-->
+        </div>
     </div>
 </section>
