--- a/public/app/views/f1constructorstandings.html
+++ b/public/app/views/f1constructorstandings.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-3">
                 <ul class="list-group" data-bind="foreach: years">
-                    <a data-bind="attr: { href: '/#constructorstandings/' + $data }"><li class="list-group-item"><span data-bind="text: $data"></span></li></a>
+                    <a data-bind="attr: { href: '#constructorstandings/' + $data }"><li class="list-group-item"><span data-bind="text: $data"></span></li></a>
                 </ul>
             </div>
             <div class="col-md-9">
