--- a/public/app/views/f1results.html
+++ b/public/app/views/f1results.html
@@ -3,18 +3,14 @@
         <p></p>
         <div class="row">
             <div class="col-md-3">
-                <div class="panel-group">
-                    <div class="panel panel-default" data-bind="foreach: years">
-                        <div class="panel-heading">
-                            <a data-toggle="collapse" data-bind="text: $data, attr: { href: '#collapse' + $index() }"></a>
-                        </div>
-                        <div data-bind="attr: { id: 'collapse' + $index() }" class="panel-collapse collapse">
-                            <ul class="list-group" data-bind="foreach: $root.countries">
-                                <a data-bind="attr: { href: '/#results/' + $parent + '/' + $data }"><li class="list-group-item"><span data-bind="text: $root.friendly($data)"></span></li></a>
-                            </ul>
-                        </div>
+                <ul class="list-group" data-bind="foreach: years">
+                    <a data-toggle="collapse" data-bind="attr: { href: '#collapse' + $index() }"><li class="list-group-item"><span data-bind="text: $data"></span></li></a>
+                    <div data-bind="attr: { id: 'collapse' + $index() }" class="panel-collapse collapse">
+                        <ul class="list-group" data-bind="foreach: $root.countries">
+                            <a data-bind="attr: { href: '#results/' + $parent + '/' + $data }"><li class="list-group-item"><span data-bind="text: '- ' + $root.friendly($data)"></span></li></a>
+                        </ul>
                     </div>
-                </div>
+                </ul>
             </div>
             <div class="col-md-9">
                 <!-- ko if: yearParam() != null && countryParam != null -->
