--- a/public/app/views/shell.html
+++ b/public/app/views/shell.html
@@ -1,4 +1,4 @@
-﻿<div>
+﻿<div class="toggled">
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -17,22 +17,9 @@
             
 
             <ul class="nav navbar-nav" data-bind="foreach: router.navigationModel">
-                <!-- ko if: $data.childRouter == undefined && $data.parent === undefined -->
                 <li data-bind="css: { active: isActive }">
-                    <a data-bind="attr: { href: hash }, text: title"></a>
+                    <a data-bind="attr: { href: hash }, text: title, click: $root.hideMenu"></a>
                 </li>
-                <!-- /ko -->
-
-                <!-- ko if: $data.childRouter !== undefined -->
-                <li data-bind="css: { active: isActive }">
-                    <a data-bind="attr: { href: hash }, text: title"></a>
-                    <ul data-bind="foreach: childRouter">
-                        <li>
-                            <a data-bind="attr: { href: hash }, text: title"></a>
-                        </li>
-                    </ul>
-                </li>
-                <!-- /ko -->
             </ul>
 
             <!--Spinning Image when searching appears on far right-->
@@ -53,4 +40,12 @@
     </nav>
 
     <div class="page-host" data-bind="router: { transition:'entrance' }"></div>
+    <script type="text/javascript">
+            jQuery(function(){
+                jQuery(".navbar-nav li a").click(function(event) {
+                    console.log('sdfsdf');
+                    jQuery(".navbar-collapse").collapse('hide');
+                });
+            });
+        </script>
 </div>
