added teams tab, datatables, loading gif, fixed some menu issues

--- a/public/app/views/driverimage.html
+++ b/public/app/views/driverimage.html
@@ -1,6 +1,7 @@
 <div class="modal-content pictureDetail autoclose">
     <div class="modal-header" style="text-align: center;">
         <h3 data-bind="html: Name"></h3>
+        <h4 data-bind="text: Team.Name"></h4>
     </div>
     <div class="modal-body">
         <img data-bind="attr:{src: ImageURL}" />
