--- a/public/app/views/f1results.html
+++ b/public/app/views/f1results.html
@@ -1,12 +1,12 @@
-<section class="toggled">
+<section>
     <div class="container">
         <p></p>
         <div class="row">
             <div class="col-md-3">
                 <ul class="list-group" data-bind="foreach: years">
                     <a data-toggle="collapse" data-bind="attr: { href: '#collapse' + $index() }"><li class="list-group-item"><span data-bind="text: $data"></span></li></a>
-                    <div data-bind="attr: { id: 'collapse' + $index() }" class="panel-collapse collapse">
-                        <ul class="list-group" data-bind="foreach: $root.countries">
+                    <div data-bind="attr: { id: 'collapse' + $index() }" class="panel-collapse collapse toggled">
+                        <ul class="list-group" data-bind="foreach: $root.countries, attr: { id: 'collapseul' + $index()}">
                             <a data-bind="attr: { href: '#results/' + $parent + '/' + $data }, click: $root.hideMenu"><li class="list-group-item"><span data-bind="text: '- ' + $root.friendly($data)"></span></li></a>
                         </ul>
                     </div>
