--- a/public/app/views/driverimage.html
+++ b/public/app/views/driverimage.html
@@ -1,7 +1,7 @@
 <div class="modal-content pictureDetail autoclose">
     <div class="modal-header" style="text-align: center;">
         <h3 data-bind="html: Name"></h3>
-        <h4 data-bind="text: Team.Name"></h4>
+        <a data-bind="click: $root.closeModal" style="cursor: pointer;"><h4 data-bind="text: Team.Name"></h4></a>
     </div>
     <div class="modal-body">
         <img data-bind="attr:{src: ImageURL}" />
