--- a/public/app/views/f1scrape.html
+++ b/public/app/views/f1scrape.html
@@ -5,7 +5,7 @@
         <h3>Scrape Data</h3>
         <div class="form-group">
             <form>
-                <input type="text" style="width: 500px;" placeholder="Auth Token" class="form-control" id="token"/>
+                <input type="text" placeholder="Auth Token" class="form-control" id="token"/>
             </form>
         </div>
         <div class="form-group">
