--- a/public/app/views/f1seasons.html
+++ b/public/app/views/f1seasons.html
@@ -20,7 +20,7 @@
                         <tr>
                             
                             <td style="cursor: pointer;" data-bind="click: $parent.select"><a data-bind="text: $root.friendly(RaceCountry.Name)"></a></td>
-                            <td data-bind="text: DateFrom + ' - ' + DateTo + ' ' + Month"></td>
+                            <td data-bind="text: DateFrom + ' ' + Month + ' - ' + DateTo + ' ' + Month"></td>
                             <td style="cursor: pointer;" data-bind="click: $parent.viewSchedule"><a>View</a></td>
                         </tr>
                     </tbody>
