added LastUpdated code to scrape.js

--- a/public/app/views/f1scrape.html
+++ b/public/app/views/f1scrape.html
@@ -13,28 +13,32 @@
             <img src="css/ellipsis.gif" id="loading-drivers" style="width: 30px; display: none;"/>
             <img src="css/tick_green.png" id="success-drivers" style="width: 30px; display: none;"/>
             <img src="css/red_cross.png" id="fail-drivers" style="width: 26px; display: none;"/>
-            <span id="error-drivers"></span>
+            <span id="error-drivers"></span><br />
+            <span id="updated-drivers" class="smalltext"></span>
         </div>
         <div class="form-group">
             <button type="button" class="btn btn-primary" id="standings" value="Standings" data-bind="click: $root.scrapeData">Standings</button>
             <img src="css/ellipsis.gif" id="loading-standings" style="width: 30px; display: none;"/>
             <img src="css/tick_green.png" id="success-standings" style="width: 30px; display: none;"/>
             <img src="css/red_cross.png" id="fail-standings" style="width: 26px; display: none;"/>
-            <span id="error-standings"></span>
+            <span id="error-standings"></span><br />
+            <span id="updated-standings" class="smalltext"></span>
         </div>
         <div class="form-group">
             <button type="button" class="btn btn-primary" id="seasons" value="Seasons" data-bind="click: $root.scrapeData">Seasons</button>
             <img src="css/ellipsis.gif" id="loading-seasons" style="width: 30px; display: none;"/>
             <img src="css/tick_green.png" id="success-seasons" style="width: 30px; display: none;"/>
             <img src="css/red_cross.png" id="fail-seasons" style="width: 26px; display: none;"/>
-            <span id="error-seasons"></span>
+            <span id="error-seasons"></span><br />
+            <span id="updated-seasons" class="smalltext"></span>
         </div>
         <div class="form-group">
             <button type="button"  class="btn btn-primary" id="results" value="Results" data-bind="click: $root.scrapeData" >Results</button>
             <img src="css/ellipsis.gif" id="loading-results" style="width: 30px; display: none;"/>
             <img src="css/tick_green.png" id="success-results" style="width: 30px; display: none;"/>
             <img src="css/red_cross.png" id="fail-results" style="width: 26px; display: none;"/>
-            <span id="error-results"></span>
+            <span id="error-results"></span><br />
+            <span id="updated-results" class="smalltext"></span>
         </div>
         
     </div>
