--- a/public/css/starterkit.css
+++ b/public/css/starterkit.css
@@ -4,6 +4,7 @@
  * see: http://durandaljs.com or https://github.com/BlueSpire/Durandal for details
  */
 
+
 body {
     background: url(Background.png);
 }
@@ -45,7 +46,7 @@ body {
     line-height: 1.5em;
     -webkit-text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
     text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
-    /*text-transform: uppercase;*/
+    text-transform: uppercase;
 }
 
 .splash .fa-spinner {
@@ -63,6 +64,7 @@ body {
     bottom: 0;
     overflow-x: hidden;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 section {
@@ -70,7 +72,7 @@ section {
 }
 
 .navbar-nav li.loader {
-    margin: 12px 24px 0 6px;
+    margin: 12px 6px 0 6px;
     visibility: hidden;
 }
 
