--- a/public/app/views/f1scrape.html
+++ b/public/app/views/f1scrape.html
@@ -1,7 +1,6 @@
 <section>
     <div class="container">
-        <p></p>
-        <p></p>
+        
         <h3>Scrape Data</h3>
         <div class="form-group">
             <form>
@@ -17,7 +16,13 @@
             <span id="updated-drivers" class="smalltext"></span>
         </div>
         <div class="form-group">
-            <button type="button" class="btn btn-primary" id="standings" value="Standings" data-bind="click: $root.scrapeData">Standings</button>
+            <div class="btn-group">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="standings" value="Standings" >Standings  <span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                    <li><a class="dd-link" data-bind="click: $root.scrapeData" id="standings" data-from="all" >All Years</a></li>
+                    <li><a class="dd-link" data-bind="click: $root.scrapeData" id="standings" data-from="current">Current Year</a></li>
+                </ul>
+            </div>
             <img src="css/ellipsis.gif" id="loading-standings" style="width: 30px; display: none;"/>
             <img src="css/tick_green.png" id="success-standings" style="width: 30px; display: none;"/>
             <img src="css/red_cross.png" id="fail-standings" style="width: 26px; display: none;"/>
@@ -25,7 +30,13 @@
             <span id="updated-standings" class="smalltext"></span>
         </div>
         <div class="form-group">
-            <button type="button" class="btn btn-primary" id="seasons" value="Seasons" data-bind="click: $root.scrapeData">Seasons</button>
+            <div class="btn-group">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="seasons" value="Seasons">Seasons  <span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                    <li><a class="dd-link" data-bind="click: $root.scrapeData" id="seasons" data-from="all" >All Years</a></li>
+                    <li><a class="dd-link" data-bind="click: $root.scrapeData" id="seasons" data-from="current">Current Year</a></li>
+                </ul>
+            </div>
             <img src="css/ellipsis.gif" id="loading-seasons" style="width: 30px; display: none;"/>
             <img src="css/tick_green.png" id="success-seasons" style="width: 30px; display: none;"/>
             <img src="css/red_cross.png" id="fail-seasons" style="width: 26px; display: none;"/>
