--- a/public/app/views/f1standings.html
+++ b/public/app/views/f1standings.html
@@ -8,13 +8,13 @@
                 </ul>
             </div>
             <div class="col-md-9">
-                <!-- ko if: param() != null -->
-                <h2 data-bind="text: 'Driver Standings for ' + param()"></h2>
+                <!-- ko if: yearParam() != null -->
+                <h2 data-bind="text: 'Driver Standings for ' + yearParam()"></h2>
                 <table class="table table-striped" id="driversTable">
                     <thead>
                         <tr><th>Position</th><th>Full Name</th><th>Nationality</th><th>Team</th><th>Points</th></tr>
                     </thead>
-                    <tbody data-bind="foreach: drivers">
+                    <tbody data-bind="foreach: standingsForYear">
                         <tr>
                             <td data-bind="text: Position"></td>
                             <td data-bind="text: Driver"></td>
