added config file, increased speed of results

--- a/public/app/views/driverimage.html
+++ b/public/app/views/driverimage.html
@@ -4,7 +4,7 @@
         <a data-bind="click: $root.closeModal" style="cursor: pointer;"><h4 data-bind="text: Team.Name"></h4></a>
     </div>
     <div class="modal-body">
-        <img data-bind="attr:{src: ImageURL}" />
+        <img class="img-responsive" data-bind="attr:{src: ImageURL}" />
         <div class="details">
             <table class="table table-striped">
                 <tr>
