--- a/public/app/views/f1drivers.html
+++ b/public/app/views/f1drivers.html
@@ -4,7 +4,7 @@
         <img src="css/ellipsis.gif" id="loading" style="width: 50px; display: none; "/>
         <!-- ko foreach: drivers -->
         <div class="well well-sm col-md-3 col-sm-4 col-xs-6">
-            <img class="dd-link-img well-img-top img-responsive" src="..." alt="Card image cap" data-bind="attr:{src: ImageURL}, click:$parent.select">
+            <img class="dd-link-img well-img-top img-responsive" alt="Card image cap" data-bind="attr:{src: ImageURL}, click:$parent.select">
             <div class="well-block" style="text-align: center;">
                 <h4 class="well-title" data-bind="text: Name" ></h4>
                 <h4 class="well-title" data-bind="text: DriverNumber" ></h4>
